refactor: break code into ES modules and fix browser imports

--- a/index.html
+++ b/index.html
@@ -533,6 +533,6 @@ https://templatemo.com/tm-602-graph-page
 </div>
 
 <script src="templatemo-graph-script.js"></script>
-<script src="dist/index.js" defer></script>
+<script type="module" src="./dist/main.js"></script>
 </body>
 </html>
